# EE6470-MidtermProject

midterm_project/: report.md
midterm_project/HLS_unroll/: System.cpp  System.h  TangentSearcher.cpp  TangentSearcher.h  Testbench.cpp  Testbench.h  Utility.cpp  Utility.h  input.txt  main.cpp
midterm_project/HLS_unroll/stratus/: Makefile.prj  project.tcl
midterm_project/TLM/: CMakeLists.txt  Makefile  MemoryMap.h  TangentSearcher.cpp  TangentSearcher.h  Testbench.cpp  Testbench.h  Utility.h  main.cpp
